# smart-qna-ingestion

./: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yml  pyproject.toml
app/: ingest_pipeline.py  logger_config.py  sync_utils.py  trigger_ingestion.py
